// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostsControl matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="material-design-search-list mtd-posts"
      >
        <div
          class="material-design-search-list__selected"
        >
          <div
            class="material-design-search-list__selected-header"
          >
            <strong>
              1 post selected
            </strong>
            <button
              aria-label="Clear all posts"
              class="components-button is-link is-destructive"
              type="button"
            >
              Clear all
            </button>
          </div>
          <ul>
            <li />
          </ul>
        </div>
        <div
          class="material-design-search-list__search"
        >
          <div
            class="components-base-control css-wdf2ti-Wrapper e1puf3u3"
          >
            <div
              class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
            >
              <label
                class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
                for="inspector-text-control-0"
              >
                Search for posts to display
              </label>
              <input
                class="components-text-control__input"
                id="inspector-text-control-0"
                type="search"
                value=""
              />
            </div>
          </div>
        </div>
        <ul
          class="material-design-search-list__list"
        >
          <li>
            <label
              class=" material-design-search-list__item depth-0"
              for="1"
            >
              <input
                class="material-design-search-list__item-input"
                id="1"
                type="checkbox"
                value=""
              />
              <span
                class="material-design-search-list__item-label"
              >
                <span
                  class="material-design-search-list__item-name"
                >
                  (no title)
                </span>
              </span>
            </label>
          </li>
          <li>
            <label
              class=" material-design-search-list__item depth-0"
              for="2"
            >
              <input
                checked=""
                class="material-design-search-list__item-input"
                id="2"
                type="checkbox"
                value=""
              />
              <span
                class="material-design-search-list__item-label"
              >
                <span
                  class="material-design-search-list__item-name"
                >
                  (no title)
                </span>
              </span>
            </label>
          </li>
          <li>
            <label
              class=" material-design-search-list__item depth-0"
              for="3"
            >
              <input
                class="material-design-search-list__item-input"
                id="3"
                type="checkbox"
                value=""
              />
              <span
                class="material-design-search-list__item-label"
              >
                <span
                  class="material-design-search-list__item-name"
                >
                  (no title)
                </span>
              </span>
            </label>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="material-design-search-list mtd-posts"
    >
      <div
        class="material-design-search-list__selected"
      >
        <div
          class="material-design-search-list__selected-header"
        >
          <strong>
            1 post selected
          </strong>
          <button
            aria-label="Clear all posts"
            class="components-button is-link is-destructive"
            type="button"
          >
            Clear all
          </button>
        </div>
        <ul>
          <li />
        </ul>
      </div>
      <div
        class="material-design-search-list__search"
      >
        <div
          class="components-base-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <label
              class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
              for="inspector-text-control-0"
            >
              Search for posts to display
            </label>
            <input
              class="components-text-control__input"
              id="inspector-text-control-0"
              type="search"
              value=""
            />
          </div>
        </div>
      </div>
      <ul
        class="material-design-search-list__list"
      >
        <li>
          <label
            class=" material-design-search-list__item depth-0"
            for="1"
          >
            <input
              class="material-design-search-list__item-input"
              id="1"
              type="checkbox"
              value=""
            />
            <span
              class="material-design-search-list__item-label"
            >
              <span
                class="material-design-search-list__item-name"
              >
                (no title)
              </span>
            </span>
          </label>
        </li>
        <li>
          <label
            class=" material-design-search-list__item depth-0"
            for="2"
          >
            <input
              checked=""
              class="material-design-search-list__item-input"
              id="2"
              type="checkbox"
              value=""
            />
            <span
              class="material-design-search-list__item-label"
            >
              <span
                class="material-design-search-list__item-name"
              >
                (no title)
              </span>
            </span>
          </label>
        </li>
        <li>
          <label
            class=" material-design-search-list__item depth-0"
            for="3"
          >
            <input
              class="material-design-search-list__item-input"
              id="3"
              type="checkbox"
              value=""
            />
            <span
              class="material-design-search-list__item-label"
            >
              <span
                class="material-design-search-list__item-name"
              >
                (no title)
              </span>
            </span>
          </label>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PostsControl matches snapshot when there is an error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-placeholder material-design-block-api-error is-small"
      >
        <iframe
          aria-hidden="true"
          frameborder="0"
          src="about:blank"
          style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
        <div
          class="components-placeholder__label"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
          Sorry, an error occurred
        </div>
        <div
          class="components-placeholder__fieldset"
        >
          <div
            class="wc-block-error-message"
          >
            <span>
              The following error was returned
              <br />
              <code>
                Test error message
              </code>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-placeholder material-design-block-api-error is-small"
    >
      <iframe
        aria-hidden="true"
        frameborder="0"
        src="about:blank"
        style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
      <div
        class="components-placeholder__label"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        Sorry, an error occurred
      </div>
      <div
        class="components-placeholder__fieldset"
      >
        <div
          class="wc-block-error-message"
        >
          <span>
            The following error was returned
            <br />
            <code>
              Test error message
            </code>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
